# fastapi-cerbos

./: .env.temp  .gitignore  .pre-commit-config.yaml  Dockerfile  deploy.yaml  docker-compose.yaml  gunicorn_config.py  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: policy-tests.yaml
cms/videos/: crud.py  models.py
cms/videos/v1/: routes.py  schemas.py
conf/: settings.py
conf/cerbos/: conf.yaml
conf/db/: dependencies.py  models.py
policies/: common_roles.yaml  principal_policy.yaml  resource_policy.yaml
policies/_schemas/: principal.json  video.json
scripts/: generate_jwt.py
tests/: video_test.yaml
utils/auth/: session.py
